- Fixed: Closing Voltcraft usb device handle after reading
- Implemented: BMP085/MySensors forecast Cloudy/Rain when pressure is <1010 hPa and original forecast was Cloudy
- Implemented: Hungarian language support (big thanks to Isty1974!)
- Implemented: Devices tab, Barometer/Text log option
- Changed: Wind sensor, now using max speed/gust in short log

Version 2.0.2284 (February 22th 2015)
- Fixed: Firefox, RGBW/Setpoint popup

Version 2.0.2283 (February 21th 2015)
- Implemented: Icon scaling setting per floorplan
- Updated: floorplan code to handle non-landscape images better
- Fixed: Possible crash in Eventsystem (GetCurrentMeasurementStates) where string value was empty
- Implemented: Manual add Blinds T6 type (DC106, YOOHA, Rohrmotor24 RMF)
- Fixed: Pushover notification setup in settings (could contain invalid characters)
- Fixed: OpenZWave, converted home_id to correct variable
- Fixed: Blinds1, T6 DC160 should work now
- Implemented: Dewpoint devices in Blockly
- Updated: floorplan interface, German translation
- Fixed: Setting default security network key for openzwave
- Implemented: Devices tab, CM180 log option
- Implemented: Logging counter values for P1 meter (not displayed yet)
- Implemented: SBFSpot compatible now
- Implemented: Trend Lines in various charts
- Fixed: Openzwave/zwave.me issues with large home_id
- Implemented: Logging when a script is executed
- Implemented: OpenZWave Node Queried status, last seen in Node table
- Implemented: Native Mochad hardware support (thanks to kaashoek)
- Fixed: lua/blockly energy device value
- Fixed: lua 'UpdateDevice' now reloads current states
- Implemented: Blockly/Lua Thermostat/Setpoint utility device
- Changed: Scene/Group now takes switch On-Delay into account
- Fixed: OpenZWave Node configuration parameters with special characters
- Changed: lua 'UpdateDevice' now updates internal state instead of reloading all states
- Implemented: Support for device-type Usage/Electric in Blockly/Lua