@@ -27,8 +27,8 @@ struct mapping
   { "png", "image/png" },
   { "css", "text/css" },
   { "xml", "application/xml" },
-  { "js", "text/javascript" },
-  { "json", "text/javascript" },
+  { "js", "application/javascript" },
+  { "json", "application/json" },
   { "swf", "application/x-shockwave-flash" },
   { "manifest", "text/cache-manifest" },
   { "appcache", "text/cache-manifest" },
