@@ -31,7 +31,7 @@
           <td align="right" style="width:60px"><label><span data-i18n="Display">Display</span>: </label></td>
           <td>
 			<select id="combometertype" style="width:150px" class="combobox ui-corner-all">
-				<option value="0">Kilometers</option>
+				<option value="0">Centimeters</option>
 				<option value="1">Inches</option>
 			</select>
 		  </td>
